--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hotels-server",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,10 +15,12 @@
   "author": "andropovv",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
     "config": "^3.3.9",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
-    "chalk": "^4.1.2"
+    "express-validator": "^6.14.3",
+    "mongoose": "^6.9.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
