--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0"
   },
   "devDependencies": {
