--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index",
     "serve": "cross-env NODE_ENV=development nodemon index"
